Fix task container alignment

--- a/src/scss/components/_tasks.scss
+++ b/src/scss/components/_tasks.scss
@@ -11,12 +11,8 @@
     gap: 1rem;
   }
 
+  &-info,
   &-container {
-    align-items: center;
-    flex: 1;
-  }
-
-  &-info {
     flex: 1;
   }
 
